--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "mcp[cli]===1.2.0rc1",
     "psycopg2-binary>=2.9.10",
     "pymysql>=1.1.1",
+    "pymssql>=2.3.4",
     "sqlalchemy>=2.0.36",
 ]
 [project.scripts]
