--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "psycopg2-binary>=2.9.10",
     "pymysql>=1.1.1",
     "pymssql>=2.3.4",
+    "pyodbc>=5.2.0",
     "sqlalchemy>=2.0.36",
 ]
 [project.scripts]
